--- a/CompanyManagement/src/main/resources/templates/home.html
+++ b/CompanyManagement/src/main/resources/templates/home.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-
-<link th:rel="stylesheet" th:href="@{/css/styles.css}">
+<html lang="en"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http//www.thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http//www.thymeleaf.org ">
 
 <head>
     <meta charset="utf-8">
@@ -23,40 +24,40 @@
         <a th:href="@{/logout}"> Logout </a>
     </div>
 </div>
-<!--<div class="container my-2">!-->
+
     <div class="card">
         <div class="card-body">
-            <div th:switch="${customers}" class="container my-5">
+            <div th:switch="${employees}" class="container my-5">
                 <p class="my-5">
-                    <a href="/customers/signup" class="btn btn-primary"><i
-                            class="fas fa-user-plus ml-2"> Add Customer</i></a>
+                    <a href="/employees/ShowNewEmployeeForm" class="btn btn-primary"><i
+                            class="fas fa-user-plus ml-2"> Add Employee</i></a>
                 </p>
                 <div class="col-md-10">
-                    <h2 th:case="null">No customers yet!</h2>
+                    <h2 th:case="null">No Employees yet!</h2>
                     <div th:case="*">
                         <table class="table table-striped table-responsive-md">
                             <thead>
                             <tr>
-                                <th>Name</th>
-                                <th>Surname</th>
-                                <th>OIB</th>
+                                <th>First Name</th>
+                                <th>Last Name</th>
+                                <th>Oib</th>
                                 <th>Address</th>
-                                <th>Telephone</th>
-                                <th>City</th>
+                                <th>Email</th>
+                                <th>Role</th>
                                 <th>Edit</th>
                                 <th>Delete</th>
                             </tr>
                             </thead>
                             <tbody>
-                            <tr th:each="customer : ${customers}">
-                                <td th:text="${customer.customerName}"></td>
-                                <td th:text="${customer.surname}"></td>
-                                <td th:text="${customer.oib}"></td>
-                                <td th:text="${customer.address}"></td>
-                                <td th:text="${customer.telephone}"></td>
-                                <td th:text="${customer.city}"></td>
-                                <td><a th:href="@{/customers/edit/{id}(id=${customer.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
-                                <td><a th:href="@{/customers/delete/{id}(id=${customer.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
+                            <tr th:each="employee : ${employees}">
+                                <td th:text="${employee.employeeName}"></td>
+                                <td th:text="${employee.surname}"></td>
+                                <td th:text="${employee.oib}"></td>
+                                <td th:text="${employee.address}"></td>
+                                <td th:text="${employee.email}"></td>
+                                <td th:text="${employee.roles}"></td>
+                                <td><a th:href="@{/employees/edit/{id}(id=${employee.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
+                                <td><a th:href="@{/employees/delete/{id}(id=${employee.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
                             </tr>
                             </tbody>
                         </table>
@@ -66,7 +67,7 @@
             </div>
         </div>
     </div>
-<!--</div>!-->
+</div>
 </body>
 
 </html>
