--- a/CompanyManagement/src/main/resources/templates/index.html
+++ b/CompanyManagement/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:schemaLocation="http://www.thymeleaf.org ">
 
 <link th:rel="stylesheet" th:href="@{/css/styles.css}">
@@ -42,7 +42,7 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         </p>
     </div>
     <div>
-        <a href="#">ITEM SEARCH</a>
+        <a th:href="@{/items/listOfItems}">ITEM SEARCH</a>
         <br>.</br>
         <p>
             Add a new item
