--- a/CompanyManagement/src/main/resources/templates/registration.html
+++ b/CompanyManagement/src/main/resources/templates/registration.html
@@ -55,7 +55,7 @@
                         required autofocus="autofocus" />
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="oib"> Oib </label> <input
+                    <label class="control-label" for="oib"> Oib </label> <input minlength="11" maxlength="11"
                         id="oib" class="form-control" th:field="*{oib}" required
                         autofocus="autofocus" />
                 </div>
