--- a/CompanyManagement/src/main/resources/templates/customer-add.html
+++ b/CompanyManagement/src/main/resources/templates/customer-add.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
+<link th:rel="stylesheet" th:href="@{/css/styles.css}">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -12,23 +14,32 @@
 </head>
 
 <body>
+<div class="topnav">
+    <a class="active" href="http://localhost:8080/">Home</a>
+    <a href="@{/employees/listOfEmployees}">Employees</a>
+    <a href="#">About</a>
+    <!--admin if-->
+    <div class="topnav-right">
+        <a th:href="@{/logout}"> Logout </a>
+    </div>
+</div>
 <div class="container my-5">
-    <h3> Add Customer</h3>
     <div class="card">
         <div class="card-body">
             <div class="col-md-10">
                 <form action="#" th:action="@{/customers/addCustomer}" th:object="${customer}" method="post">
+                    <h3> Add Customer</h3>
                     <div class="row">
                         <div class="form-group col-md-8">
-                            <label for="customerName" class="col-form-label">Name</label> <input type="text" th:field="*{customerName}" class="form-control" id="customerName" placeholder="Name"> <span th:if="${#fields.hasErrors('customerName')}" th:errors="*{customerName}" class="text-danger"></span>
+                            <label for="customerName" class="col-form-label">First Name</label> <input type="text" th:field="*{customerName}" class="form-control" id="customerName" placeholder="Name"> <span th:if="${#fields.hasErrors('customerName')}" th:errors="*{customerName}" class="text-danger"></span>
                         </div>
 
                         <div class="form-group col-md-8">
-                            <label for="surname" class="col-form-label">Surname</label> <input type="text" th:field="*{surname}" class="form-control" id="surname" placeholder="Surname"> <span th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}" class="text-danger"></span>
+                            <label for="surname" class="col-form-label">Last Name</label> <input type="text" th:field="*{surname}" class="form-control" id="surname" placeholder="Surname"> <span th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}" class="text-danger"></span>
                         </div>
 
                         <div class="form-group col-md-8">
-                            <label for="oib" class="col-form-label">Oib</label> <input type= "number" value="0" th:field="*{oib}" class="form-control" id="oib" placeholder="PhoneNo"> <span th:if="${#fields.hasErrors('oib')}" th:errors="*{oib}" class="text-danger"></span>
+                            <label for="oib" class="col-form-label">OIB</label> <input minlength="11" maxlength="11" type="text" th:field="*{oib}" class="form-control" id="oib" placeholder="Oib"> <span th:if="${#fields.hasErrors('oib')}" th:errors="*{oib}" class="text-danger"></span>
                         </div>
 
                         <div class="form-group col-md-8">
