--- a/CompanyManagement/src/main/resources/templates/customer-list.html
+++ b/CompanyManagement/src/main/resources/templates/customer-list.html
@@ -16,29 +16,41 @@
 <body>
 <div class="topnav">
     <a class="active" href="http://localhost:8080/">Home</a>
-    <a href="#">Employees</a>
+    <a class="active" href="http://localhost:8080/employees/listOfEmployees">Employees</a>
     <a href="#">About</a>
     <!--admin if-->
     <div class="topnav-right">
         <a th:href="@{/logout}"> Logout </a>
     </div>
 </div>
+
 <!--<div class="container my-2">!-->
-    <div class="card">
+<div class="card">
         <div class="card-body">
-            <div th:switch="${customers}" class="container my-5">
+            <div th:switch="${page.content}" class="container my-5">
                 <p class="my-5">
                     <a href="/customers/signup" class="btn btn-primary"><i
                             class="fas fa-user-plus ml-2"> Add Customer</i></a>
                 </p>
+                <div>
+                    <form th:action="@{/customers/search}">
+                        <i class="fas fa-search"></i>
+                        <input type="text" placeholder="Filter by surname" name="keyword" th:value="${keyword}"required/>
+                        &nbsp;
+                        <input type="submit" value="Search" class="btn btn-primary"/>
+                        &nbsp;
+                        <input type="button" value="Clear" id="btnClear" onclick="clearFilter()" class="btn btn-primary"/>
+                    </form>
+
+                </div>
                 <div class="col-md-10">
-                    <h2 th:case="null">No customers yet!</h2>
+                    <h2 th:case="null">No customers</h2>
                     <div th:case="*">
-                        <table class="table table-striped table-responsive-md">
+                        <table class="table table-striped table-responsive-md">&nbsp;
                             <thead>
                             <tr>
-                                <th>Name</th>
-                                <th>Surname</th>
+                                <th>First Name</th>
+                                <th>Last Name</th>
                                 <th>OIB</th>
                                 <th>Address</th>
                                 <th>Telephone</th>
@@ -48,7 +60,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr th:each="customer : ${customers}">
+                            <tr th:each="customer : ${page.content}">
                                 <td th:text="${customer.customerName}"></td>
                                 <td th:text="${customer.surname}"></td>
                                 <td th:text="${customer.oib}"></td>
@@ -60,13 +72,31 @@
                             </tr>
                             </tbody>
                         </table>
+                        <div class="pagination-div">
+                        <span th:if="${page.hasPrevious()}">
+                            <a class="btn btn-primary" th:href="@{/customers/page(page=${page.number-1},size=${page.size})}">Previous</a>
+                        </span>
+                            <th:block th:each="i: ${#numbers.sequence(0, page.totalPages - 1)}">
+                                <span th:if="${page.number == i}" class="selected">[[${i}+1]]</span>
+                                <span th:unless="${page.number == i}">
+                                    <a th:href="@{/customers/page(page=${i},size=${page.size})}">[[${i}+1]]</a>
+                                </span>
+                            </th:block>
+                            <span th:if="${page.hasNext()}">
+                                <a class="btn btn-primary" th:href="@{/customers/page(page=${page.number+1},size=${page.size})}">Next</a>
+                            </span>
+                        </div>
                     </div>
-
                 </div>
             </div>
         </div>
     </div>
 <!--</div>!-->
+<script type="text/javascript">
+    function clearFilter() {
+        window.location = '/customers/page';
+    }
+</script>
 </body>
 
 </html>
