--- a/CompanyManagement/src/main/resources/templates/update-customer.html
+++ b/CompanyManagement/src/main/resources/templates/update-customer.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
+<link th:rel="stylesheet" th:href="@{/css/styles.css}">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -11,6 +13,15 @@
 </head>
 
 <body>
+<div class="topnav">
+    <a class="active" href="http://localhost:8080/">Home</a>
+    <a th:href="@{/employees/listOfEmployees}">Employees</a>
+    <a href="#">About</a>
+    <!--admin if-->
+    <div class="topnav-right">
+        <a th:href="@{/logout}"> Logout </a>
+    </div>
+</div>
 <div class="container my-5">
     <h3> Update Customer</h3>
     <div class="card">
@@ -19,27 +30,27 @@
                 <form action="#" th:action="@{/customers/update/{id}(id=${customer.id})}" th:object="${customer}" method="post">
                     <div class="row">
                         <div class="form-group col-md-6">
-                            <label for="customerName" class="col-form-label">Name</label> <input type="text" th:field="*{customerName}" class="form-control" id="customerName" placeholder="Name"> <span th:if="${#fields.hasErrors('customerName')}" th:errors="*{customerName}" class="text-danger"></span>
+                            <label for="customerName" class="col-form-label">First Name</label> <input type="text" th:field="*{customerName}" class="form-control" id="customerName" placeholder="Name"> <span th:if="${#fields.hasErrors('customerName')}" th:errors="*{customerName}" class="text-danger"></span>
                         </div>
 
                         <div class="form-group col-md-8">
-                            <label for="surname" class="col-form-label">Surname</label> <input type="text" th:field="*{surname}" class="form-control" id="surname" placeholder="Surname"> <span th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}" class="text-danger"></span>
+                            <label for="surname" class="col-form-label">Last Name</label> <input type="text" th:field="*{surname}" class="form-control" id="surname" placeholder="Surname"> <span th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}" class="text-danger"></span>
                         </div>
 
                         <div class="form-group col-md-8">
-                            <label for="oib" class="col-form-label">Oib</label> <input type= "number" value="0" th:field="*{oib}" class="form-control" id="oib" placeholder="PhoneNo"> <span th:if="${#fields.hasErrors('oib')}" th:errors="*{oib}" class="text-danger"></span>
+                            <label for="oib" class="col-form-label">Oib</label> <input minlength="11" maxlength="11" type="text" th:field="*{oib}" class="form-control" id="oib" placeholder="OIB"> <span th:if="${#fields.hasErrors('oib')}" th:errors="*{oib}" class="text-danger"></span>
                         </div>
 
                         <div class="form-group col-md-8">
-                            <label for="address" class="col-form-label">Address</label> <input type="text" th:field="*{address}" class="form-control" id="address" placeholder="address"> <span th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="text-danger"></span>
+                            <label for="address" class="col-form-label">Address</label> <input type="text" th:field="*{address}" class="form-control" id="address" placeholder="Address"> <span th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="text-danger"></span>
                         </div>
 
                         <div class="form-group col-md-8">
-                            <label for="telephone" class="col-form-label">Telephone</label> <input type="text" th:field="*{telephone}" class="form-control" id="telephone" placeholder="telephone"> <span th:if="${#fields.hasErrors('telephone')}" th:errors="*{telephone}" class="text-danger"></span>
+                            <label for="telephone" class="col-form-label">Telephone</label> <input type="text" th:field="*{telephone}" class="form-control" id="telephone" placeholder="Telephone"> <span th:if="${#fields.hasErrors('telephone')}" th:errors="*{telephone}" class="text-danger"></span>
                         </div>
 
                         <div class="form-group col-md-8">
-                            <label for="city" class="col-form-label">City</label> <input type="text" th:field="*{city}" class="form-control" id="city" placeholder="city"> <span th:if="${#fields.hasErrors('city')}" th:errors="*{city}" class="text-danger"></span>
+                            <label for="city" class="col-form-label">City</label> <input type="text" th:field="*{city}" class="form-control" id="city" placeholder="City"> <span th:if="${#fields.hasErrors('city')}" th:errors="*{city}" class="text-danger"></span>
                         </div>
 
                         <div class="form-group col-md-8">
