--- a/CompanyManagement/src/main/resources/templates/update-employee.html
+++ b/CompanyManagement/src/main/resources/templates/update-employee.html
@@ -3,6 +3,9 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http//www.thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:schemaLocation="http//www.thymeleaf.org ">
+
+<link th:rel="stylesheet" th:href="@{/css/styles.css}">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -13,6 +16,15 @@
 </head>
 
 <body>
+<div class="topnav">
+    <a class="active" href="http://localhost:8080/">Home</a>
+    <a th:href="@{/employees/listOfEmployees}">Employees</a>
+    <a href="#">About</a>
+    <!--admin if-->
+    <div class="topnav-right">
+        <a th:href="@{/logout}"> Logout </a>
+    </div>
+</div>
 <div class="container my-5">
     <h3> Update Employee</h3>
     <div class="card">
@@ -27,7 +39,7 @@
                             <label for="surname" class="col-form-label">Last Name</label> <input type="text" th:field="*{surname}" class="form-control" id="surname" placeholder=" Last Name"> <span th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-8">
-                            <label for="oib" class="col-form-label">Oib</label> <input type="text" th:field="*{oib}" class="form-control" id="oib" placeholder="Oib"> <span th:if="${#fields.hasErrors('oib')}" th:errors="*{oib}" class="text-danger"></span>
+                            <label for="oib" class="col-form-label">Oib</label> <input type="text" minlength="11" maxlength="11" th:field="*{oib}" class="form-control" id="oib" placeholder="Oib"> <span th:if="${#fields.hasErrors('oib')}" th:errors="*{oib}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-8">
                             <label for="address" class="col-form-label">Address</label> <input type="text" th:field="*{address}" class="form-control" id="address" placeholder="Address"> <span th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="text-danger"></span>
