--- a/CompanyManagement/src/main/resources/templates/index.html
+++ b/CompanyManagement/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
 
 <div class="main-container">
     <div>
-        <a th:href="@{/customers/page}">CUSTOMER DATA</a>
+        <a th:href="@{/customers/viewPage}">CUSTOMER DATA</a>
         <br>.</br>
         <p>
             Create a new customer
@@ -51,7 +51,7 @@
         </p>
     </div>
     <div>
-        <a href="#">ITEM SEARCH</a>
+        <a th:href="@{/items/viewPage}">ITEM SEARCH</a>
         <br>.</br>
         <p>
             Add a new item
