--- a/CompanyManagement/src/main/resources/templates/customer-list.html
+++ b/CompanyManagement/src/main/resources/templates/customer-list.html
@@ -27,11 +27,15 @@
 <!--<div class="container my-2">!-->
 <div class="card">
         <div class="card-body">
-            <div th:switch="${page.content}" class="container my-5">
+            <div th:switch="${listCustomer}" class="container my-5">
                 <p class="my-5">
                     <a href="/customers/signup" class="btn btn-primary"><i
                             class="fas fa-user-plus ml-2"> Add Customer</i></a>
                 </p>
+                <!--<form method="post" th:action="@{/customers/search}" th:object="${page.content}" >
+                    <input type="text" th:field="*{searchText}">
+                    <button type="submit">Search</button>
+                </form>-->
                 <div>
                     <form th:action="@{/customers/search}">
                         <i class="fas fa-search"></i>
@@ -50,7 +54,11 @@
                             <thead>
                             <tr>
                                 <th>First Name</th>
-                                <th>Last Name</th>
+                                <th>
+                                   <a th:href="@{'/customers/page/' + ${currentPage} + '?sortField=surname&sortDir=' + ${reverseSortDir}}">
+                                      Last Name
+                                   </a>
+                                </th>
                                 <th>OIB</th>
                                 <th>Address</th>
                                 <th>Telephone</th>
@@ -60,7 +68,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr th:each="customer : ${page.content}">
+                            <tr th:each="customer : ${listCustomer}">
                                 <td th:text="${customer.customerName}"></td>
                                 <td th:text="${customer.surname}"></td>
                                 <td th:text="${customer.oib}"></td>
@@ -72,7 +80,7 @@
                             </tr>
                             </tbody>
                         </table>
-                        <div class="pagination-div">
+                        <!--<div class="pagination-div">
                         <span th:if="${page.hasPrevious()}">
                             <a class="btn btn-primary" th:href="@{/customers/page(page=${page.number-1},size=${page.size})}">Previous</a>
                         </span>
@@ -85,8 +93,25 @@
                             <span th:if="${page.hasNext()}">
                                 <a class="btn btn-primary" th:href="@{/customers/page(page=${page.number+1},size=${page.size})}">Next</a>
                             </span>
-                        </div>
+                        </div>-->
                     </div>
+                    <div>&nbsp;</div>
+                    <div>
+                       Total items: [[${totalElements}]] - Page [[${currentPage}]] of [[${totalPages}]]
+                        &nbsp; &nbsp;
+                        <a class="btn btn-primary" th:if="${currentPage > 1}" th:href="@{'/customers/page/1?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">First</a>
+                        <span th:unless="${currentPage > 1}">First</span>
+
+                        <span th:each="i: ${#numbers.sequence(1, totalPages)}">
+                            <a th:if="${i != currentPage} "th:href="@{'/customers/page/' + ${i} + '?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+                            <span th:unless="${i != currentPage}">[[${i}]]</span>
+                        </span>
+
+                        <a class="btn btn-primary" th:if="${currentPage < totalPages}" th:href="@{'/customers/page/' + ${totalPages} + '?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+                        <span th:unless="${currentPage < totalPages}">Last</span>
+                    </div>
+
+
                 </div>
             </div>
         </div>
@@ -94,7 +119,7 @@
 <!--</div>!-->
 <script type="text/javascript">
     function clearFilter() {
-        window.location = '/customers/page';
+        window.location = '/customers/viewPage';
     }
 </script>
 </body>
