--- a/CompanyManagement/src/main/resources/templates/customer-search.html
+++ b/CompanyManagement/src/main/resources/templates/customer-search.html
@@ -82,7 +82,7 @@
 <!--</div>!-->
 <script type="text/javascript">
     function clearFilter() {
-        window.location = '/customers/page';
+        window.location = '/customers/viewPage';
     }
 </script>
 </body>
