--- a/CompanyManagement/src/main/resources/templates/item-search.html
+++ b/CompanyManagement/src/main/resources/templates/item-search.html
@@ -39,7 +39,7 @@
             <div>
                 <form th:action="@{/items/search}">
                     <i class="fas fa-search"></i>
-                    <input type="text" placeholder="Filter by name" name="keyword" th:value="${keyword}"required/>
+                    <input type="text" placeholder="Filter by price" name="keyword" th:value="${keyword}"required/>
                     &nbsp;
                     <input type="submit" value="Search" class="btn btn-primary"/>
                     &nbsp;
@@ -55,11 +55,7 @@
                         <thead>
                         <tr>
                             <th>Item Name</th>
-                            <th>
-                                <a th:href="@{'/items/page/' + ${currentPage} + '?sortField=itemName&sortDir=' + ${reverseSortDir}}">
-                                    Purchase Price
-                                </a>
-                            </th>
+                            <th>Purchase Price</th>
                             <th>Items in Stock</th>
                             <th>Category</th>
                             <th>Edit</th>
@@ -71,7 +67,7 @@
                             <td th:text="${item.itemName}"></td>
                             <td th:text="${item.price}"></td>
                             <td th:text="${item.quantity}"></td>
-                            <!--<td th:text="${item.category.categoryName}"></td>-->
+                            <td th:text="${item.category.categoryName}"></td>
                             <td><a th:href="@{/items/edit/{id}(id=${item.id})}" class="btn btn-primary"><i class="fas fa-wrench"></i></a></td>
                             <td><a th:href="@{/items/delete/{id}(id=${item.id})}" class="btn btn-primary"><i class="fas fa-hammer"></i></a></td>
                         </tr>
@@ -84,15 +80,15 @@
                     <div>
                         Total items: [[${totalElements}]] - Page [[${currentPage}]] of [[${totalPages}]]
                         &nbsp; &nbsp;
-                        <a class="btn btn-primary" th:if="${currentPage > 1}" th:href="@{'/items/page/1?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">First</a>
+                        <a class="btn btn-primary" th:if="${currentPage > 1}" th:href="@{'/customers/page/1?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">First</a>
                         <span th:unless="${currentPage > 1}">First</span>
 
                         <span th:each="i: ${#numbers.sequence(1, totalPages)}">
-                            <a th:if="${i != currentPage} "th:href="@{'/items/page/' + ${i} + '?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+                            <a th:if="${i != currentPage} "th:href="@{'/customers/page/' + ${i} + '?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
                             <span th:unless="${i != currentPage}">[[${i}]]</span>
                         </span>
 
-                        <a class="btn btn-primary" th:if="${currentPage < totalPages}" th:href="@{'/items/page/' + ${totalPages} + '?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+                        <a class="btn btn-primary" th:if="${currentPage < totalPages}" th:href="@{'/customers/page/' + ${totalPages} + '?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
                         <span th:unless="${currentPage < totalPages}">Last</span>
                     </div>
                 </div>
