--- a/CompanyManagement/src/main/resources/templates/registration.html
+++ b/CompanyManagement/src/main/resources/templates/registration.html
@@ -35,10 +35,15 @@
         <div class="col-md-6 col-md-offset-3">
 
             <!-- success message -->
-            <div th:if="${param.success}">
+
+            <div th:if="${param.failure}">
+                <div class="alert alert-info">You've entered an email that already exists!</div>
+            </div>
+            <!--<span th:unless="${param.failure}">
                 <div class="alert alert-info">You've successfully registered
                     to our awesome app!</div>
-            </div>
+            </span>-->
+
 
             <h1>Registration</h1>
 
@@ -78,8 +83,7 @@
 
                 <div class="form-group">
                     <button type="submit" class="btn btn-success">Register</button>
-                    <span>Already registered? <a href="/" th:href="@{/login}">Login
-        here</a></span>
+                    <span>Already registered? <a href="/" th:href="@{/login}">Login here</a></span>
                 </div>
             </form>
         </div>
