--- a/CompanyManagement/src/main/resources/templates/item-list.html
+++ b/CompanyManagement/src/main/resources/templates/item-list.html
@@ -26,7 +26,7 @@
 <!--<div class="container my-2">!-->
 <div class="card">
     <div class="card-body">
-        <div th:switch="${listItem}" class="container my-5">
+        <div th:switch="${items}" class="container my-5">
             <p class="my-5">
                 <a href="/items/addItem" class="btn btn-primary"><i
                         class="fas fa-wrench"> Add New Item</i></a>
@@ -67,11 +67,11 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="item : ${listItem}">
+                        <tr th:each="item : ${items}">
                             <td th:text="${item.itemName}"></td>
                             <td th:text="${item.price}"></td>
                             <td th:text="${item.quantity}"></td>
-                            <!--<td th:text="${item.category.categoryName}"></td>-->
+                            <td th:text="${item.category.categoryName}"></td>
                             <td><a th:href="@{/items/edit/{id}(id=${item.id})}" class="btn btn-primary"><i class="fas fa-wrench"></i></a></td>
                             <td><a th:href="@{/items/delete/{id}(id=${item.id})}" class="btn btn-primary"><i class="fas fa-hammer"></i></a></td>
                         </tr>
