--- a/CompanyManagement/src/main/resources/templates/update-item.html
+++ b/CompanyManagement/src/main/resources/templates/update-item.html
@@ -28,7 +28,7 @@
         <div class="card-body">
             <div class="col-md-8">
                 <form action="#" th:action="@{/items/update/{id}(id=${item.id})}" th:object="${item}" method="post">
-                    <!--<div class="row">
+                    <div class="row">
                         <div class="form-group col-md-6">
                             <label for="itemName" class="col-form-label">Name</label> <input type="text" th:field="*{itemName}" class="form-control" id="itemName" placeholder="Name"> <span th:if="${#fields.hasErrors('itemName')}" th:errors="*{itemName}" class="text-danger"></span>
                         </div>
@@ -41,14 +41,14 @@
                             <label for="quantity" class="col-form-label">Items In Stock</label> <input type="number" th:field="*{quantity}" class="form-control" id="quantity" placeholder="quantity"> <span th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}" class="text-danger"></span>
                         </div>
 
-                        <div class="form-group col-md-8">
-                            <label for="items.category.categoryName" class="col-form-label">Category</label> <input type="text" th:field="*{items.category.categoryName}" class="form-control" id="items.category.categoryName" placeholder="Category"> <span th:if="${#fields.hasErrors('items.category.categoryName')}" th:errors="*{items.category.categoryName}" class="text-danger"></span>
-                        </div>
+                        <!--<div th:each="item : ${items}" class="form-group col-md-8">
+                            <label th:text="${item.category.categoryName}" for="item.category.categoryName" class="col-form-label">Category</label> <input type="text" th:field="*{item.category.categoryName}" class="form-control" id="item.category.categoryName" placeholder="Category"> <span th:if="${#fields.hasErrors('item.category.categoryName')}" th:errors="*{item.category.categoryName}" class="text-danger"></span>
+                        </div>-->
 
                         <div class="form-group col-md-8">
                             <input type="submit" class="btn btn-primary" value="Update Item">
                         </div>
-                    </div>-->
+                    </div>
                 </form>
             </div>
         </div>
