--- a/CompanyManagement/src/main/resources/templates/category-add.html
+++ b/CompanyManagement/src/main/resources/templates/category-add.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+
+<link th:rel="stylesheet" th:href="@{/css/styles.css}">
 
 <head>
     <meta charset="utf-8">
@@ -12,23 +15,35 @@
 </head>
 
 <body>
+<div class="topnav">
+    <a class="active" href="http://localhost:8080/">Home</a>
+    <div sec:authorize="hasAnyAuthority('ADMIN')">
+        <a th:href="@{/employees/viewPage}">Employees</a>
+    </div>
+    <a href="#">About</a>
+    <!--admin if-->
+    <div class="topnav-right">
+        <a th:href="@{/logout}"> Logout </a>
+    </div>
+</div>
 <div class="container my-5">
-    <h3> Add New Category</h3>
+    <br>
     <div class="card">
         <div class="card-body">
             <div class="col-md-10">
                 <form action="#" th:action="@{/categories/addCategory}" th:object="${category}" method="post">
+                    <h3> Add New Category &nbsp;&nbsp;&nbsp;<a href="http://localhost:8080/items/viewPage" class="btn btn-purple" style="background-color:#4f4397;color:white"><i class="fa-solid fa-left"></i>Go back</a></h3>
                     <div class="row">
                         <div class="form-group col-md-8">
                             <label for="categoryName" class="col-form-label">Name</label> <input type="text" th:field="*{categoryName}" class="form-control" id="categoryName" placeholder="Category Name"> <span th:if="${#fields.hasErrors('categoryName')}" th:errors="*{categoryName}" class="text-danger"></span>
                         </div>
 
                         <div class="col-md-6">
-                            <input type="submit" class="btn btn-primary" value="Add New Category">
+                            <input type="submit" class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white" value="Add New Category">
                         </div>
 
                         <p class="my-5">
-                            <a href="/items/addItem" class="btn btn-primary"><i
+                            <a href="/items/addItem" class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white"><i
                                     class="fas fa-wrench"> Add New Item</i></a>
                         </p>
 
