--- a/CompanyManagement/src/main/resources/templates/customer-list.html
+++ b/CompanyManagement/src/main/resources/templates/customer-list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <link th:rel="stylesheet" th:href="@{/css/styles.css}">
 
@@ -16,7 +17,9 @@
 <body>
 <div class="topnav">
     <a class="active" href="http://localhost:8080/">Home</a>
-    <a class="active" href="http://localhost:8080/employees/listOfEmployees">Employees</a>
+    <div sec:authorize="hasAnyAuthority('ADMIN')">
+        <a th:href="@{/employees/viewPage}">Employees</a>
+    </div>
     <a href="#">About</a>
     <!--admin if-->
     <div class="topnav-right">
@@ -29,21 +32,16 @@
         <div class="card-body">
             <div th:switch="${listCustomer}" class="container my-5">
                 <p class="my-5">
-                    <a href="/customers/signup" class="btn btn-primary"><i
-                            class="fas fa-user-plus ml-2"> Add Customer</i></a>
+                    <a href="/customers/signup" class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white"><i class="fas fa-plus"></i>&nbsp;Add Customer</a>
                 </p>
-                <!--<form method="post" th:action="@{/customers/search}" th:object="${page.content}" >
-                    <input type="text" th:field="*{searchText}">
-                    <button type="submit">Search</button>
-                </form>-->
                 <div>
-                    <form th:action="@{/customers/search}">
+                    <form th:action="@{/customers/viewPPage}">
                         <i class="fas fa-search"></i>
                         <input type="text" placeholder="Filter by surname" name="keyword" th:value="${keyword}"required/>
                         &nbsp;
-                        <input type="submit" value="Search" class="btn btn-primary"/>
+                        <input type="submit" value="Search" class="btn btn-purple btn-sm" style="font:Verdana;background-color:#4f4397;color:white"/>
                         &nbsp;
-                        <input type="button" value="Clear" id="btnClear" onclick="clearFilter()" class="btn btn-primary"/>
+                        <input type="button" value="Clear" id="btnClear" onclick="clearFilter()" class="btn btn-purple btn-sm" style="font:Verdana;background-color:#4f4397;color:white"/>
                     </form>
 
                 </div>
@@ -53,10 +51,10 @@
                         <table class="table table-striped table-responsive-md">&nbsp;
                             <thead>
                             <tr>
-                                <th>First Name</th>
+                                <th>First&nbsp;Name</th>
                                 <th>
                                    <a th:href="@{'/customers/page/' + ${currentPage} + '?sortField=surname&sortDir=' + ${reverseSortDir}}">
-                                      Last Name
+                                      Last&nbsp;Name
                                    </a>
                                 </th>
                                 <th>OIB</th>
@@ -70,36 +68,22 @@
                             <tbody>
                             <tr th:each="customer : ${listCustomer}">
                                 <td th:text="${customer.customerName}"></td>
-                                <td th:text="${customer.surname}"></td>
+                                <td class="text-nowrap" th:text="${customer.surname}"></td>
                                 <td th:text="${customer.oib}"></td>
-                                <td th:text="${customer.address}"></td>
+                                <td class="text-nowrap" th:text="${customer.address}"></td>
                                 <td th:text="${customer.telephone}"></td>
-                                <td th:text="${customer.city}"></td>
-                                <td><a th:href="@{/customers/edit/{id}(id=${customer.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
-                                <td><a th:href="@{/customers/delete/{id}(id=${customer.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
+                                <td class="text-nowrap" th:text="${customer.city}"></td>
+                                <td><a th:href="@{/customers/edit/{id}(id=${customer.id})}" class="btn btn-info btn-sm" style="font:Verdana;background-color:#17a2b8;color:white"><i class="fas fa-info-circle"></i>&nbsp;Edit customer</a></td>
+                                <td><a th:href="@{/customers/delete/{id}(id=${customer.id})}" class="btn btn-danger btn-sm" style="font:Verdana;background-color:#dc3545;color:white"><i class="fas fa-trash-alt"></i>&nbsp;Delete customer</a></td>
                             </tr>
                             </tbody>
                         </table>
-                        <!--<div class="pagination-div">
-                        <span th:if="${page.hasPrevious()}">
-                            <a class="btn btn-primary" th:href="@{/customers/page(page=${page.number-1},size=${page.size})}">Previous</a>
-                        </span>
-                            <th:block th:each="i: ${#numbers.sequence(0, page.totalPages - 1)}">
-                                <span th:if="${page.number == i}" class="selected">[[${i}+1]]</span>
-                                <span th:unless="${page.number == i}">
-                                    <a th:href="@{/customers/page(page=${i},size=${page.size})}">[[${i}+1]]</a>
-                                </span>
-                            </th:block>
-                            <span th:if="${page.hasNext()}">
-                                <a class="btn btn-primary" th:href="@{/customers/page(page=${page.number+1},size=${page.size})}">Next</a>
-                            </span>
-                        </div>-->
                     </div>
                     <div>&nbsp;</div>
                     <div>
                        Total items: [[${totalElements}]] - Page [[${currentPage}]] of [[${totalPages}]]
                         &nbsp; &nbsp;
-                        <a class="btn btn-primary" th:if="${currentPage > 1}" th:href="@{'/customers/page/1?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">First</a>
+                        <a class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white" th:if="${currentPage > 1}" th:href="@{'/customers/page/1?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">First</a>
                         <span th:unless="${currentPage > 1}">First</span>
 
                         <span th:each="i: ${#numbers.sequence(1, totalPages)}">
@@ -107,7 +91,7 @@
                             <span th:unless="${i != currentPage}">[[${i}]]</span>
                         </span>
 
-                        <a class="btn btn-primary" th:if="${currentPage < totalPages}" th:href="@{'/customers/page/' + ${totalPages} + '?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+                        <a class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white" th:if="${currentPage < totalPages}" th:href="@{'/customers/page/' + ${totalPages} + '?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
                         <span th:unless="${currentPage < totalPages}">Last</span>
                     </div>
 
