--- a/CompanyManagement/src/main/resources/templates/customer-search.html
+++ b/CompanyManagement/src/main/resources/templates/customer-search.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <link th:rel="stylesheet" th:href="@{/css/styles.css}">
 
@@ -16,7 +17,9 @@
 <body>
 <div class="topnav">
     <a class="active" href="http://localhost:8080/">Home</a>
-    <a href="@{/employees/listOfEmployees}">Employees</a>
+    <div sec:authorize="hasAnyAuthority('ADMIN')">
+        <a th:href="@{/employees/viewPage}">Employees</a>
+    </div>
     <a href="#">About</a>
     <!--admin if-->
     <div class="topnav-right">
@@ -30,28 +33,27 @@
 
         <div th:switch="${listCustomers}" class="container my-5">
             <p class="my-5">
-                <a href="/customers/signup" class="btn btn-primary"><i
-                        class="fas fa-user-plus ml-2"> Add Customer</i></a>
+                <a href="/customers/signup" class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white"><i class="fas fa-plus"></i>&nbsp;Add Customer</a>
             </p>
             <div>
                 <form th:action="@{/customers/search}">
                     <i class="fas fa-search"></i>
                     <input type="text" placeholder="Filter by surname" name="keyword" th:value="${keyword}"required/>
                     &nbsp;
-                    <input type="submit" value="Search" class="btn btn-primary"/>
+                    <input type="submit" value="Search" class="btn btn-purple btn-sm" style="font:Verdana;background-color:#4f4397;color:white"/>
                     &nbsp;
-                    <input type="button" value="Clear" id="btnClear" onclick="clearFilter()" class="btn btn-primary"/>
+                    <input type="button" value="Clear" id="btnClear" onclick="clearFilter()" class="btn btn-purple btn-sm" style="font:Verdana;background-color:#4f4397;color:white"/>
                 </form>
             </div>
-
+            <br>
             <div class="col-md-10">
                 <h2 th:case="null">No customers with this name</h2>
                 <div th:case="*">
                     <table class="table table-striped table-responsive-md">
                         <thead>
                         <tr>
-                            <th>First Name</th>
-                            <th>Last Name</th>
+                            <th>First&nbsp;Name</th>
+                            <th>Last&nbsp;Name</th>
                             <th>OIB</th>
                             <th>Address</th>
                             <th>Telephone</th>
@@ -63,16 +65,31 @@
                         <tbody>
                         <tr th:each="customers : ${listCustomers}">
                             <td th:text="${customers.customerName}"></td>
-                            <td th:text="${customers.surname}"></td>
+                            <td class="text-nowrap" th:text="${customers.surname}"></td>
                             <td th:text="${customers.oib}"></td>
-                            <td th:text="${customers.address}"></td>
+                            <td class="text-nowrap" th:text="${customers.address}"></td>
                             <td th:text="${customers.telephone}"></td>
-                            <td th:text="${customers.city}"></td>
-                            <td><a th:href="@{/customers/edit/{id}(id=${customers.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
-                            <td><a th:href="@{/customers/delete/{id}(id=${customers.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
+                            <td class="text-nowrap" th:text="${customers.city}"></td>
+                            <td><a th:href="@{/customers/edit/{id}(id=${customers.id})}" class="btn btn-info btn-sm" style="font:Verdana;background-color:#17a2b8;color:white"><i class="fas fa-info-circle"></i>&nbsp;Edit customer</a></td>
+                            <td><a th:href="@{/customers/delete/{id}(id=${customers.id})}" class="btn btn-danger btn-sm" style="font:Verdana;background-color:#dc3545;color:white"><i class="fas fa-trash-alt"></i>&nbsp;Delete customer</a></td>
                         </tr>
                         </tbody>
                     </table>
+                </div>
+                <div>&nbsp;</div>
+                <div>
+                    Total items: [[${totalElements}]] - Page [[${currentPage}]] of [[${totalPages}]]
+                    &nbsp; &nbsp;
+                    <a class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white" th:if="${currentPage > 1}" th:href="@{'/customers/page/1?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">First</a>
+                    <span th:unless="${currentPage > 1}">First</span>
+
+                    <span th:each="i: ${#numbers.sequence(1, totalPages)}">
+                            <a th:if="${i != currentPage} "th:href="@{'/customers/page/' + ${i} + '?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+                            <span th:unless="${i != currentPage}">[[${i}]]</span>
+                        </span>
+
+                    <a class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white" th:if="${currentPage < totalPages}" th:href="@{'/customers/page/' + ${totalPages} + '?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+                    <span th:unless="${currentPage < totalPages}">Last</span>
                 </div>
 
             </div>
