--- a/CompanyManagement/src/main/resources/templates/employee-search.html
+++ b/CompanyManagement/src/main/resources/templates/employee-search.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <link th:rel="stylesheet" th:href="@{/css/styles.css}">
 
@@ -16,7 +17,9 @@
 <body>
 <div class="topnav">
     <a class="active" href="http://localhost:8080/">Home</a>
-    <a href="@{/employees/listOfEmployees}">Employees</a>
+    <div sec:authorize="hasAnyAuthority('ADMIN')">
+        <a th:href="@{/employees/viewPage}">Employees</a>
+    </div>
     <a href="#">About</a>
     <!--admin if-->
     <div class="topnav-right">
@@ -30,28 +33,27 @@
 
         <div th:switch="${listEmployees}" class="container my-5">
             <p class="my-5">
-                <a href="/employees/signup" class="btn btn-primary"><i
-                        class="fas fa-user-plus ml-2"> Add Employee</i></a>
+                <a href="/employees/ShowNewEmployeeForm" class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white"><i class="fas fa-plus"></i>&nbsp;Add Employee</a>
             </p>
             <div>
                 <form th:action="@{/employees/search}">
                     <i class="fas fa-search"></i>
                     <input type="text" placeholder="Filter by surname" name="keyword" th:value="${keyword}"required/>
                     &nbsp;
-                    <input type="submit" value="Search" class="btn btn-primary"/>
+                    <input type="submit" value="Search" class="btn btn-purple btn-sm" style="font:Verdana;background-color:#4f4397;color:white"/>
                     &nbsp;
-                    <input type="button" value="Clear" id="btnClear" onclick="clearFilter()" class="btn btn-primary"/>
+                    <input type="button" value="Clear" id="btnClear" onclick="clearFilter()" class="btn btn-purple btn-sm" style="font:Verdana;background-color:#4f4397;color:white"/>
                 </form>
             </div>
-
+            <br>
             <div class="col-md-10">
                 <h2 th:case="null">No employees with this name</h2>
                 <div th:case="*">
                     <table class="table table-striped table-responsive-md">
                         <thead>
                         <tr>
-                            <th>First Name</th>
-                            <th>Last Name</th>
+                            <th>First&nbsp;Name</th>
+                            <th>Last&nbsp;Name</th>
                             <th>OIB</th>
                             <th>Address</th>
                             <th>email</th>
@@ -63,12 +65,13 @@
                         <tbody>
                         <tr th:each="employees : ${listEmployees}">
                             <td th:text="${employees.employeeName}"></td>
-                            <td th:text="${employees.surname}"></td>
+                            <td class="text-nowrap" th:text="${employees.surname}"></td>
                             <td th:text="${employees.oib}"></td>
+                            <td class="text-nowrap" th:text="${employees.address}"></td>
                             <td th:text="${employees.email}"></td>
-                            <td th:text="${employees.userRole.roleName}"></td>????
-                            <td><a th:href="@{/employees/edit/{id}(id=${employees.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
-                            <td><a th:href="@{/employees/delete/{id}(id=${employees.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
+                            <td th:text="${employees.roles}"></td>
+                            <td><a th:href="@{/employees/edit/{id}(id=${employees.id})}" class="btn btn-info btn-sm" style="font:Verdana;background-color:#17a2b8;color:white"><i class="fas fa-info-circle"></i>&nbsp;Edit employee</a></td>
+                            <td><a th:href="@{/employees/delete/{id}(id=${employees.id})}" class="btn btn-danger btn-sm" style="font:Verdana;background-color:#dc3545;color:white"><i class="fas fa-trash-alt"></i>&nbsp;Delete employee</a></td>
                         </tr>
                         </tbody>
                     </table>
@@ -81,7 +84,7 @@
 <!--</div>!-->
 <script type="text/javascript">
     function clearFilter() {
-        window.location = '/employees/';
+        window.location = '/employees/viewPage';
     }
 </script>
 </body>
