--- a/CompanyManagement/src/main/resources/templates/item-list.html
+++ b/CompanyManagement/src/main/resources/templates/item-list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <link th:rel="stylesheet" th:href="@{/css/styles.css}">
 
@@ -16,7 +17,9 @@
 <body>
 <div class="topnav">
     <a class="active" href="http://localhost:8080/">Home</a>
-    <a href="#">Items</a>
+    <div sec:authorize="hasAnyAuthority('ADMIN')">
+        <a th:href="@{/employees/viewPage}">Employees</a>
+    </div>
     <a href="#">About</a>
     <!--admin if-->
     <div class="topnav-right">
@@ -26,14 +29,10 @@
 <!--<div class="container my-2">!-->
 <div class="card">
     <div class="card-body">
-        <div th:switch="${items}" class="container my-5">
+        <div th:switch="${listItem}" class="container my-5">
             <p class="my-5">
-                <a href="/items/addItem" class="btn btn-primary"><i
-                        class="fas fa-wrench"> Add New Item</i></a>
-                <a href="/item/add" class="btn btn-primary"><i
-                        class="fas fa-wrench"> Add New Stock</i></a>
-                <a href="/categories/addCategory" class="btn btn-primary"><i
-                        class="fas fa-wrench"> Add New Category</i></a>
+                <a href="/items/addItem" class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white"><i class="fas fa-wrench"></i>&nbsp;Add New Item</a>
+                <a href="/categories/addCategory" class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white"><i class="fas fa-wrench"></i>&nbsp;Add New Category</a>
             </p>
 
             <div>
@@ -41,9 +40,9 @@
                     <i class="fas fa-search"></i>
                     <input type="text" placeholder="Filter by name" name="keyword" th:value="${keyword}"required/>
                     &nbsp;
-                    <input type="submit" value="Search" class="btn btn-primary"/>
+                    <input type="submit" value="Search" class="btn btn-purple btn-sm" style="font:Verdana;background-color:#4f4397;color:white"/>
                     &nbsp;
-                    <input type="button" value="Clear" id="btnClear" onclick="clearFilter()" class="btn btn-primary"/>
+                    <input type="button" value="Clear" id="btnClear" onclick="clearFilter()" class="btn btn-purple btn-sm" style="font:Verdana;background-color:#4f4397;color:white"/>
                 </form>
 
             </div>
@@ -63,17 +62,17 @@
                             <th>Items in Stock</th>
                             <th>Category</th>
                             <th>Edit</th>
-                            <th>Delete</th>
+                            <!--<th>Delete</th>-->
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="item : ${items}">
-                            <td th:text="${item.itemName}"></td>
+                        <tr th:each="item : ${listItem}">
+                            <td class="text-nowrap" th:text="${item.itemName}"></td>
                             <td th:text="${item.price}"></td>
                             <td th:text="${item.quantity}"></td>
-                            <td th:text="${item.category.categoryName}"></td>
-                            <td><a th:href="@{/items/edit/{id}(id=${item.id})}" class="btn btn-primary"><i class="fas fa-wrench"></i></a></td>
-                            <td><a th:href="@{/items/delete/{id}(id=${item.id})}" class="btn btn-primary"><i class="fas fa-hammer"></i></a></td>
+                            <td class="text-nowrap" th:text="${item.category.categoryName}"></td>
+                            <td><a th:href="@{/items/edit/{id}(id=${item.id})}" class="btn btn-info btn-sm" style="font:Verdana;background-color:#17a2b8;color:white"><i class="fas fa-info-circle"></i>&nbsp;Edit item</a></td>
+                            <!--<td><a th:href="@{/items/delete/{id}(id=${item.id})}" class="btn btn-primary"><i class="fas fa-hammer"></i></a></td>-->
                         </tr>
                         </tbody>
                     </table>
@@ -84,7 +83,7 @@
                     <div>
                         Total items: [[${totalElements}]] - Page [[${currentPage}]] of [[${totalPages}]]
                         &nbsp; &nbsp;
-                        <a class="btn btn-primary" th:if="${currentPage > 1}" th:href="@{'/items/page/1?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">First</a>
+                        <a class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white" th:if="${currentPage > 1}" th:href="@{'/items/page/1?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">First</a>
                         <span th:unless="${currentPage > 1}">First</span>
 
                         <span th:each="i: ${#numbers.sequence(1, totalPages)}">
@@ -92,7 +91,7 @@
                             <span th:unless="${i != currentPage}">[[${i}]]</span>
                         </span>
 
-                        <a class="btn btn-primary" th:if="${currentPage < totalPages}" th:href="@{'/items/page/' + ${totalPages} + '?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+                        <a class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white" th:if="${currentPage < totalPages}" th:href="@{'/items/page/' + ${totalPages} + '?sortField='+ ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
                         <span th:unless="${currentPage < totalPages}">Last</span>
                     </div>
                 </div>
