--- a/CompanyManagement/src/main/resources/templates/registration.html
+++ b/CompanyManagement/src/main/resources/templates/registration.html
@@ -44,24 +44,23 @@
                     to our awesome app!</div>
             </span>-->
 
-
             <h1>Registration</h1>
 
             <form th:action="@{/registration}" method="post" th:object="${employee}">
                 <div class="form-group">
                     <label class="control-label" for="firstName"> First Name </label>
-                    <input id="firstName" class="form-control" th:field="*{firstName}"
+                    <input pattern="[A-Za-z]" id="firstName" class="form-control" th:field="*{firstName}"
                            required autofocus="autofocus" />
                 </div>
 
                 <div class="form-group">
                     <label class="control-label" for="lastName"> Last Name </label> <input
-                        id="lastName" class="form-control" th:field="*{lastName}"
+                        pattern="[A-Za-z]" id="lastName" class="form-control" th:field="*{lastName}"
                         required autofocus="autofocus" />
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="oib"> Oib </label> <input minlength="11" maxlength="11"
-                        id="oib" class="form-control" th:field="*{oib}" required
+                    <label class="control-label" for="oib"> OIB </label> <input minlength="11" maxlength="11"
+                         id="oib" class="form-control" th:field="*{oib}" required
                         autofocus="autofocus" />
                 </div>
                 <div class="form-group">
@@ -70,7 +69,7 @@
                         autofocus="autofocus" />
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="email"> Email </label> <input
+                    <label class="control-label" for="email"> Email </label> <input pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$"
                         id="email" class="form-control" th:field="*{email}" required
                         autofocus="autofocus" />
                 </div>
