--- a/CompanyManagement/src/main/resources/templates/update-employee.html
+++ b/CompanyManagement/src/main/resources/templates/update-employee.html
@@ -2,7 +2,8 @@
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http//www.thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http//www.thymeleaf.org ">
+      xsi:schemaLocation="http//www.thymeleaf.org "
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <link th:rel="stylesheet" th:href="@{/css/styles.css}">
 
@@ -18,7 +19,9 @@
 <body>
 <div class="topnav">
     <a class="active" href="http://localhost:8080/">Home</a>
-    <a th:href="@{/employees/listOfEmployees}">Employees</a>
+    <div sec:authorize="hasAnyAuthority('ADMIN')">
+        <a th:href="@{/employees/viewPage}">Employees</a>
+    </div>
     <a href="#">About</a>
     <!--admin if-->
     <div class="topnav-right">
@@ -53,13 +56,13 @@
                         <div class="form-group col-md-8">
                             <label class="col-4 col-form-label">Roles: </label>
                             <th:block th:each="UserRole: ${listRoles}">
-                                <input type="checkbox" th:field="*{roles}"
+                                <input type="radio" th:field="*{roles}"
                                        th:text="${UserRole.roleName}" th:value="${UserRole.id}" class="m-2" />
                             </th:block>
                         </div>
 
                         <div class="form-group col-md-8">
-                            <input type="submit" class="btn btn-primary" value="Update Employee">
+                            <input type="submit" class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white" value="Update Employee">
                         </div>
                     </div>
                 </form>
