--- a/CompanyManagement/src/main/resources/templates/registration.html
+++ b/CompanyManagement/src/main/resources/templates/registration.html
@@ -34,28 +34,23 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
 
-            <!-- success message -->
-
+            <!-- failure message -->
             <div th:if="${param.failure}">
                 <div class="alert alert-info">You've entered an email that already exists!</div>
             </div>
-            <!--<span th:unless="${param.failure}">
-                <div class="alert alert-info">You've successfully registered
-                    to our awesome app!</div>
-            </span>-->
 
             <h1>Registration</h1>
 
             <form th:action="@{/registration}" method="post" th:object="${employee}">
                 <div class="form-group">
                     <label class="control-label" for="firstName"> First Name </label>
-                    <input pattern="[A-Za-z]" id="firstName" class="form-control" th:field="*{firstName}"
+                    <input pattern="^([A-Za-z]{2,}\s[A-Za-z]{2,})" id="firstName" class="form-control" th:field="*{firstName}"
                            required autofocus="autofocus" />
                 </div>
 
                 <div class="form-group">
                     <label class="control-label" for="lastName"> Last Name </label> <input
-                        pattern="[A-Za-z]" id="lastName" class="form-control" th:field="*{lastName}"
+                        pattern="^([a-zA-Z]{2,}\s[a-zA-Z]{1,}'?-?[a-zA-Z]{2,}\s?([a-zA-Z]{1,})?)" id="lastName" class="form-control" th:field="*{lastName}"
                         required autofocus="autofocus" />
                 </div>
                 <div class="form-group">
