--- a/CompanyManagement/src/main/resources/templates/update-item.html
+++ b/CompanyManagement/src/main/resources/templates/update-item.html
@@ -19,15 +19,14 @@
     <div sec:authorize="hasAnyAuthority('ADMIN')">
         <a th:href="@{/employees/viewPage}">Employees</a>
     </div>
-    <!--admin if-->
     <div class="topnav-right">
         <a th:href="@{/logout}"> Logout </a>
     </div>
 </div>
 <div class="container my-5">
-    <h3> Update Item</h3>
     <div class="card">
         <div class="card-body">
+            <h3> Update Item</h3>
             <div class="col-md-8">
                 <form action="#" th:action="@{/items/update/{id}(id=${item.id})}" th:object="${item}" method="post">
                     <div class="row">
@@ -43,14 +42,19 @@
                             <label for="quantity" class="col-form-label">Items In Stock</label> <input type="number" th:field="*{quantity}" class="form-control" id="quantity" placeholder="quantity"> <span th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}" class="text-danger"></span>
                         </div>
 
-                        <div class="form-group col-md-8">
-                            <label class="col-4 col-form-label">Categories: </label>
-                            <th:block th:each="Category: ${category}">
-                                <input type="radio" th:field="*{category}"
-                                       th:text="${Category.categoryName}" th:value="${Category.id}" class="m-2" />
-                            </th:block>
-                        </div>
+                        <a class="form-group col-md-8"> Categories: </a>
+                        <br>
+                        <div class="align-items-right">
 
+                            <th:block th:each="Category: ${category}">
+                                &nbsp;&nbsp;&nbsp;&nbsp;<input type="radio" th:field="*{category}"
+                                       th:text="${Category.categoryName}" th:value="${Category.id}" class="m-2" />
+                                <br>
+                            </th:block>
+                            <br>
+                        </div>
+                        <br>
+                        <br>
                         <div class="form-group col-md-8">
                             <input type="submit" class="btn btn-purple btn-sm" style="background-color:#4f4397;color:white" value="Update Item">
                         </div>
