Fixed some features

--- a/CompanyManagement/src/main/resources/templates/invoice-add.html
+++ b/CompanyManagement/src/main/resources/templates/invoice-add.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="card">
-        <div class="card-header bg-dark text-white h4">Create Invoice</div>
+        <div class="card-header bg-dark text-white h4">Create Invoice&nbsp;&nbsp;<a href="http://localhost:8080/invoices/viewPage" class="btn btn-purple" style="background-color:#4f4397;color:white"><i class="fa-solid fa-left"></i>Go back</a></div>
         <div class="card-body">
             <div class="col-md-10">
                 <form action="#" method="post" th:action="@{/invoices/invoice}" th:object="${invoice}">
